2015-03-30  Mike Frysinger  <vapier@gentoo.org>

	* armemu.c [MODE32] (handle_v6_insn): Move definition.
	(ARMul_Emulate26): Initialize do_int after label target.
	* armemu.h (UNDEF_Test, UNDEF_Shift, UNDEF_MSRPC, UNDEF_MRSPC,
	UNDEF_MULPCDest, UNDEF_MULDestEQOp1, UNDEF_LSRBPC,
	UNDEF_LSRBaseEQOffWb, UNDEF_LSRBaseEQDestWb, UNDEF_LSRPCBaseWb,
	UNDEF_LSRPCOffWb, UNDEF_LSMNoRegs, UNDEF_LSMPCBase,
	UNDEF_LSMUserBankWb, UNDEF_LSMBaseInListWb, UNDEF_SWPPC,
	UNDEF_CoProHS, UNDEF_MCRPC, UNDEF_LSCPCBaseWb,
	UNDEF_UndefNotBounced, UNDEF_ShortInt, UNDEF_IllegalMode,
	UNDEF_Prog32SigChange, UNDEF_Data32SigChange): Define to while(0).
	* armsupp.c (ARMul_Align): Convert old style prototype.
	* bag.c (addtolist, killwholelist): Mark static.
	(BAG_newbag): Convert old style prototype.
	* maverick.c (mv_compute_host_endianness): Delete.
	* wrapper.c (verbosity, sim_set_verbose): Delete.
	(init): Set state->verbose to 0.

2015-03-30  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac: Call SIM_AC_OPTION_ENDIAN, SIM_AC_OPTION_ALIGNMENT,
	SIM_AC_OPTION_HOSTENDIAN, SIM_AC_OPTION_ENVIRONMENT,
	SIM_AC_OPTION_INLINE, and SIM_AC_OPTION_WARNINGS.
	* config.in, configure: Regenerate.

2015-03-30  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (COPRO): Delete.
	(SIM_OBJS): Expand COPRO.
	* configure.ac: Deletd stdint.h check.
	(COPRO): Delete.
	* configure: Regenerate.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.
	* tconfig.in: Rename file ...
	* tconfig.h: ... here.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_EXTRA_CFLAGS): Add
	-DSIM_USE_DEPRECATED_RUN_FRONTEND.
	(SIM_RUN_OBJS): Set to run.o.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete unistd.h.
	* aclocal.m4, configure: Regenerate.

2014-08-19  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2014-08-15  Roland McGrath  <mcgrathr@google.com>

	* configure: Regenerate.
	* config.in: Regenerate.
